--- a/index.html
+++ b/index.html
@@ -1058,11 +1058,11 @@
 					</div>		
 					
 					<div class="row mx-0 bottommargin-lg align-items-stretch">
-						<div class="col-lg-8 col-md-6 d-md-block px-0">
+						<div class="col-lg-8 d-md-block px-0">
 							<div class="fluid-width-video-wrapper" style="padding-top: 75%;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.329676859425!2d-89.61392416169667!3d21.008372122890265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f5676af7557afc5%3A0xf10c9f5aa6d5ab79!2sPolygon%20Studio!5e0!3m2!1ses-419!2smx!4v1658293406929!5m2!1ses-419!2smx" style="border:0; filter: grayscale(100%) invert(100%) contrast(83%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="fitvid0"></iframe></div>
 						</div>
 	
-						<div class="col-lg-4 col-md-6" style="background-color: #161616;" id="address">
+						<div class="col-lg-4" style="background-color: #161616;" id="address">
 							<div class="col-padding">
 								<h5>Dirección</h5>
 								<p style="font-size: small; color: #bebebe;">
