--- a/forms/FormConFondo.html
+++ b/forms/FormConFondo.html
@@ -65,7 +65,7 @@
             <div class="m-7">
                 <form action="https://api.web3forms.com/submit" method="POST" id="form"> <!-- class="needs-validation" novalidate>  -->          
                     <input type="hidden" name="access_key" value="929cfc90-18fc-4def-9880-b29da52e78b9" />
-                    <input type="hidden" name="redirect" value="https://dinosauri.golf/thanks.html">
+                    <input type="hidden" name="redirect" value="https://grupolti.com/thanks.html">
                     <input type="hidden" name="from_name" value="LT&I - Contacto">
                     <input type="hidden" name="subject" value="LT&I - Alguien se contactó por la web" />
                     <input type="checkbox" name="botcheck" id="" style="display: none;" />
