--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 
 
 	<!-- Google tag (gtag.js) Google Analitycs -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-GLTZPVZYST"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-GLTZPVZYST');
+	</script>
 
 	<title>LT&I</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
