--- a/forms/FormConFondo.html
+++ b/forms/FormConFondo.html
@@ -69,7 +69,7 @@
                     <input type="hidden" name="from_name" value="LT&I - Contacto">
                     <input type="hidden" name="subject" value="LT&I - Alguien se contactó por la web" />
                     <input type="checkbox" name="botcheck" id="" style="display: none;" />
-                    <input type="hidden" name="ccemail" value="xyz" />
+                    <input type="hidden" name="ccemail" value="direccion@lti.com.mx"/>
                     <div class="flex mb-6 space-x-4">
                         <div class="w-full">
                             <label for="fname" class="block mb-2 text-sm text-gray-600 dark:text-gray-400">Nombre</label>
@@ -100,7 +100,7 @@
                     <div class="flex mb-6 space-x-4">
                         <div class="w-full">
                             <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-400">Correo electrónico</label>
-                            <input type="email" name="email" id="email" placeholder="" required class="w-full px-3 py-2 placeholder-gray-300 border-2 border-gray-200 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300" />
+                            <input type="email" name="email" id="email" aria-autocomplete="off" placeholder="" required class="w-full px-3 py-2 placeholder-gray-300 border-2 border-gray-200 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300" />
                             <div class="empty-feedback text-red-400 text-sm mt-1">
                                 Este campo es obligatorio.
                             </div>
