--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 	<meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Rich G - RCK Games" />
-    <meta name="description" content="Light, Tech & Innovation">
+    <meta name="description" content="Lead, Tech & Innovation">
 
     <link rel="icon" href="lti-icon.png">
 
 
 	<meta name="twitter:card" content="summary" />
     <!-- <meta name="twitter:site" content="@UMGbar" /> -->
-    <meta name="twitter:title" content="LT&I" />
-    <meta name="twitter:description" content="Light, Tech & Innovation" />
+    <meta name="twitter:title" content="LT+I" />
+    <meta name="twitter:description" content="Lead, Tech & Innovation" />
     <meta name="twitter:image" content="https://grupolti.com/images/images-lti/lti-Image-Socials.jpg" />
 
-    <meta property="og:title" content="LT&I" />
-    <meta property="og:description" content="Light, Tech & Innovation" />
+    <meta property="og:title" content="LT+I" />
+    <meta property="og:description" content="Lead, Tech & Innovation" />
     <meta property="og:type" content="website" />  
     <meta property="og:url" content="https://grupolti.com" />
     <meta property="og:image" content="https://grupolti.com/images/images-lti/lti-Image-Socials.jpg" />
